--- a/basic/image.html
+++ b/basic/image.html
@@ -2,9 +2,31 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>多方法实现等分布局</title>
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
+    <link href="../reset.css" type="text/css" rel="stylesheet"/>
+    <link href="image.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
+
+<div class="page-content">
+    <header>
+        <div>Image layout</div>
+    </header>
+
+    <div class="title">使用padding实现自适应</div>
+    <div class="padding-image-responsive">
+        <img src="http://gw.alicdn.com/tps/i2/TB1cHB1HpXXXXcOXpXXdIns_XXX-1125-352.jpg_q50.jpg" alt=""/>
+    </div>
+    <div class="padding-background-responsive" style="margin-top:20px"></div>
+
+    <div class="title">background-size</div>
+    <div class="background-image">
+        <div class="qq"></div>
+    </div>
+    <div class="background-image-test" style="margin-bottom: 20px;"></div>
+</div>
+
 
 </body>
 </html>
